feat: 1、go log 2、ansible
