# routers/router.go
@@ -24,7 +24,6 @@ func InitRouter() *gin.Engine {
 	r.GET("/auth", api.GetAuth)
 
 	apiv1 := r.Group("api/v1")
-
 	{
 		apiv1.GET("/tags", v1.GetTags)
 
@@ -33,6 +32,8 @@ func InitRouter() *gin.Engine {
 		apiv1.PUT("/tags", v1.EditTag)
 
 		apiv1.DELETE("/tags", v1.DeleteTag)
+
+		apiv1.POST("/ansible", v1.AnsiblePlayExecutor)
 	}
 
 	//r.GET("/test", func(c *gin.Context) {
